--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Manrope', sans-serif;
-    font-size: 1.25rem;
-    letter-spacing: 0.05rem;
+    font-size: 18px;
+    letter-spacing: 1px;
     color: rgb(9, 0, 95);
 }
 
@@ -32,7 +32,7 @@ body {
 
 .plan-price {
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 42px;
 }
 
 .plan-features {
@@ -59,7 +59,7 @@ body {
 .plan-button {
     border-width: 0px;
     font-weight:bolder;
-    font-size: 1.5rem;
+    font-size: 24px;
     color: white;
     background-color: rgb(0, 102, 255);
     padding: 20px 40px;
